--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
-<!doctype html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NSS Cohort 11</title>
-  </head>
-  <body>
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+---
+layout: default
+---
 
-    <div class="container">
-      <h1>NSS Cohort 11</h1>
-    </div>
-  </body>
-</html>
+{% include intro.html %}
+{% include students.html %}
+{% include studentLife.html %}
+
