add under construction banner

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+{% include underConstruction.html %}
 {% include intro.html %}
 {% include students.html %}
 {% include studentLife.html %}
