brian added his info

--- a/_posts/2016-02-04-BrianStumbaugh.html
+++ b/_posts/2016-02-04-BrianStumbaugh.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Brian Stumbaugh"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Brian"
+lastName: "Stumbaugh"
 imgUrl: "/images/joeSchmoe.jpg"
 websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+githubUrl: "https://github.com/beezy12"
+linkedInUrl: "https://www.linkedin.com/in/brian-stumbaugh-4b8766113?trk=nav_responsive_tab_profile"
+body: "I was happy to discover code, as it's balance of creativity and critical thinking suits me well. There's nothing better than being stuck on a problem and the feeling you get when you power through."
 ---
 
 
