Add text and URLs to my personal profile on website

--- a/_posts/2016-02-04-MichaelConrad.html
+++ b/_posts/2016-02-04-MichaelConrad.html
@@ -6,10 +6,10 @@ date:   2016-02-09 12:00:00 -0600
 firstName: "Michael"
 lastName: "Conrad"
 imgUrl: "/images/michaelConrad.jpg"
-websiteUrl: "threepears.github.io"
+websiteUrl: "http://threepears.com/"
 githubUrl: "https://github.com/threepears"
-linkedInUrl: "#"
-body: "Filler text Filler text Filler text Filler text"
+linkedInUrl: "https://www.linkedin.com/in/msconrad"
+body: "Friendly, enthusiastic developer and designer. In my past lives I was a radio DJ and print production manager. Hobbies include songwriting, comic book illustration, and subverting dominant paradigms."
 ---
 
 
