mike ulvila info and image

--- a/_posts/2016-02-04-MikeUlvila.html
+++ b/_posts/2016-02-04-MikeUlvila.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Mike Ulvila"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Mike"
+lastName: "Ulvila"
+imgUrl: "/images/mikeulvila.jpg"
+websiteUrl: "http://mikeulvila.com"
+githubUrl: "https://github.com/mikeulvila"
+linkedInUrl: "https://www.linkedin.com/in/mikeulvila"
+body: "Mike from Montana moved to Music City to make melodies for money.  After mastering his craft he decided to create code for cash, because that's a real bad ass."
 ---
 
 
