--- a/_posts/2016-02-04-JasonStiltner.html
+++ b/_posts/2016-02-04-JasonStiltner.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Jason Stiltner"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Jason"
+lastName: "Stiltner"
+imgUrl: "/images/jasonStiltner.jpg"
+websiteUrl: "www.stiltner.io"
+githubUrl: "github.com/jstiltner"
+linkedInUrl: "www.linkedin.com/in/jasonlstiltner"
+body: "Balanced generalist turned coder to ideate and contribute to the great construction projects of the 21st Century.  A big picture, globally-minded problem-solver; linguist; father of two."
 ---
 
 
