Updated profile information

--- a/_posts/2016-02-04-DanielleHollis.html
+++ b/_posts/2016-02-04-DanielleHollis.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "DaniellePowell"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Danielle"
+lastName: "Powell"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.hollisdesignsstudio.com"
+githubUrl: "https://github.com/hollisd09"
+linkedInUrl: "https://www.linkedin.com/in/daniellehollis"
+body: "In a past life, Danielle was a public relations practitioner and a graphic designer. Now she's working to combine her skills with her newfound knowledge of coding to become a well-rounded developer."
 ---
 
 
