updated bio & sites

--- a/_posts/2016-02-04-AmyLeeBennett.html
+++ b/_posts/2016-02-04-AmyLeeBennett.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
-date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+title:  "Amy Lee Bennett"
+date:   2016-03-04 12:00:00 -0600
+firstName: "Amy Lee"
+lastName: "Bennett"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "www.amylee.co"
+githubUrl: "https://github.com/albennett"
+linkedInUrl: "https://www.linkedin.com/in/amyleebennett"
+body: "Developed her passion for tech and its great ability to change global problems through working in the Boston tech scene and solo traveling throughout Asia. Loves to read, hike and fly-fish."
 ---
 
 
