changed card info ab AJA. still needs photo

--- a/_posts/2016-02-04-AndriAlexandrou.html
+++ b/_posts/2016-02-04-AndriAlexandrou.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
-date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+title:  "Andri Alexandrou"
+date:   2016-03-05 12:00:00 -0600
+firstName: "Andri"
+lastName: "Alexandrou"
+imgUrl: "/images/andrialexandrou.jpg"
+websiteUrl: "http://www.andrialexandrou.com"
+githubUrl: "https://github.com/andrialexandrou"
+linkedInUrl: "https://www.linkedin.com/in/andri-alexandrou-96687398"
+body: "Using software to pursue the curiosities."
 ---
 
 
