--- a/_posts/2016-02-04-StephanieGoldstein.html
+++ b/_posts/2016-02-04-StephanieGoldstein.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Stephanie Goldstein"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Stephanie"
+lastName: "Goldstein"
+imgUrl: "/images/stephanieGoldstein.jpg"
+websiteUrl: "http://codebystephanie.com"
+githubUrl: "https://github.com/stephanieg0"
+linkedInUrl: "https://www.linkedin.com/in/smgoldstein"
+body: "Being in the VFX industry for three years, Stephanie became interested in learning to code and began to study software development; she also has a fascination for petting little, furry critters."
 ---
 
 
