--- a/_posts/2016-02-04-MicahWells.html
+++ b/_posts/2016-02-04-MicahWells.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Micah Wells"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Micah"
+lastName: "Wells"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "micahpwells.com"
+githubUrl: "github.com/micahp0506"
+linkedInUrl: "linkedin.com/in/micah-wells-0b784451"
+body: "Emerging software developer who loves sports, music, and everything Jeep. I love to solve problems, learn new things, and work in a team environment."
 ---
 
 
