ssk personal content

--- a/_posts/2016-02-04-StephanieKrause.html
+++ b/_posts/2016-02-04-StephanieKrause.html
@@ -1,15 +1,14 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Stephanie Krause"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Stephanie"
+lastName: "Krause"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "schmitz1193.github.io"
+githubUrl: "github.com/schmitz1193"
+linkedInUrl: "www.linkedin.com/in/stephanieskrause"
+body: "Returning to my roots as a programmer, former HR professional, basket weaving, restaurant junkie.  Excited about working on a team, expanding my strengths & skills, & finding creative solutions."
 ---
-
 
