add profile info for Allen Phelps

--- a/_posts/2016-02-04-AllenPhelps.html
+++ b/_posts/2016-02-04-AllenPhelps.html
@@ -8,8 +8,9 @@ lastName: "Phelps"
 imgUrl: "/images/allenPhelps.jpg"
 websiteUrl: "AJPCodes.github.io"
 githubUrl: "http://www.github.com/AJPcodes"
-linkedInUrl: "#"
-body: "Filler text Filler text Filler text Filler text"
+linkedInUrl: "https://www.linkedin.com/in/allen-phelps-6b72157b"
+body: "I love the multifaceted approach to solving problems in code, the convergence of technical solutions with design creativity. I am excited to continue developing my skills in a professional capacity.
+"
 ---
 
 
