--- a/_posts/2016-02-04-MarybethSnodgrass.html
+++ b/_posts/2016-02-04-MarybethSnodgrass.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Marybeth Snodgrass"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Marybeth"
+lastName: "Snodgrass"
+imgUrl: "/images/marybethsnodgrass.jpg"
+websiteUrl: "https://www.marybethsnodgrass.com"
+githubUrl: "https://github.com/marybethsnodgrass"
+linkedInUrl: "https://www.linkedin.com/in/marybethsnodgrass"
+body: "Software Developer - Analytics Nerd - Data Enthusiast"
 ---
 
 
