first update to my profile page

--- a/_posts/2016-02-04-NathanBaldwin.html
+++ b/_posts/2016-02-04-NathanBaldwin.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Nathan Baldwin"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Nathan"
+lastName: "Baldwin"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.nbaldwincreative.com/"
+githubUrl: "https://github.com/NathanBaldwin"
+linkedInUrl: "https://www.linkedin.com/in/nathan-baldwin-73259a19?trk=nav_responsive_tab_profile"
+body: "From music, to photographs, to web apps – I love creating and am addicted to learning. Coming from the nonprofit sector, I’m excited to solve problems and help people as best as I can through technology!"
 ---
 
 
