add contact info / bio snippet

--- a/_posts/2016-02-04-RedFrench.html
+++ b/_posts/2016-02-04-RedFrench.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Red French"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Red"
+lastName: "French"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.redfrench.net"
+githubUrl: "https://github.com/Red-French"
+linkedInUrl: "https://www.linkedin.com/in/red-french-8bbb04111"
+body: "I'm a former music biz guy who's always enjoyed building; engines, songs, my house! Now, I've found the ultimate. It has me up early and up late. Building… creating… solving. Software Development!"
 ---
-
-
