added profile information

--- a/_posts/2016-02-04-TinaWisneski.html
+++ b/_posts/2016-02-04-TinaWisneski.html
@@ -1,15 +1,17 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Tina Wisneski"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Tina"
+lastName: "Wisneski"
+imgUrl: "/images/tinaWisneski.jpg"
+websiteUrl: "http://twisneski.github.io/"
+githubUrl: "https://github.com/Twisneski"
+linkedInUrl: "https://www.linkedin.com/in/christina-wisneski-36959216"
+body: "From bean counter to tech savvy, the training has ended.  It is time to show the world my new found skills.
+  <h1>Ready to be hired!</h1>
+    <p>Hello World!</p>"
 ---
 
 
