added linkedin link

--- a/_posts/2016-02-04-JessaWynneParker.html
+++ b/_posts/2016-02-04-JessaWynneParker.html
@@ -8,6 +8,7 @@ lastName: "Parker"
 imgUrl: "/images/jessawynneParker.jpg"
 websiteUrl: "https://jessawynne.github.io/"
 githubUrl: "https://github.com/Jessawynne"
+linkedInUrl: "https://www.linkedin.com/in/jessawynneparker"
 body: "I am fascinated by the intersection of technology, culture & globalization. Thanks to NSS, I've experienced how the fast pace of technology provides a space for collaboration, learning & creativity."
 ---
 
