added Bledsoe information

--- a/_posts/2016-02-04-BenjaminBledsoe.html
+++ b/_posts/2016-02-04-BenjaminBledsoe.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Benjamin Bledsoe"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Benjamin"
+lastName: "Bledsoe"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.bledsoedesigns.com/"
+githubUrl: "https://github.com/bbleds"
+linkedInUrl: "https://www.linkedin.com/in/benjamin-bledsoe-6b8584a5"
+body: "Developer, designer, explorer, and avid learner. I love anything to do with science, technology, and music."
 ---
-
-
