Sefora Rodriguez card edited

--- a/_posts/2016-02-04-SeforaRodriguez.html
+++ b/_posts/2016-02-04-SeforaRodriguez.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Sefora Rodriguez"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Sefora"
+lastName: "Rodriguez"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "seforarodriguez.com"
+githubUrl: "https://github.com/seforarodriguez"
+linkedInUrl: "https://www.linkedin.com/in/sefora-rodriguez-618019103"
+body: "I'm enjoying the infinite learning process that is coding.  A cup of tea, netflix and coding are the recipe for a good day"
 ---
 
 
