--- a/_posts/2016-02-04-EmmaBeaton.html
+++ b/_posts/2016-02-04-EmmaBeaton.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Emma Beaton"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Emma"
+lastName: "Beaton"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://emmabeaton.com/"
+githubUrl: "https://github.com/beatface"
+linkedInUrl: "https://www.linkedin.com/in/emma-beaton-0822209a"
+body: "Software development is a place where I thrive, excited about new technologies and ever-searching for ways to write better code. I love working in teams and tackling complex problems."
 ---
-
-
