--- a/_posts/2016-02-04-CalebScholze.html
+++ b/_posts/2016-02-04-CalebScholze.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
-date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+title:  "Software Developer"
+date:   2016-03-10 10:45:00 -0600
+firstName: "Caleb"
+lastName: "Scholze"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.cscholze.com"
+githubUrl: "https://github.com/cscholze"
+linkedInUrl: "https://www.linkedin.com/in/calebscholze"
+body: "Caleb's unquenchable curiosity pushes him to be a modern polymath. As a software developer, Caleb hopes to combine his creativeness and problem solving abilities to better the world he lives in."
 ---
 
 
