--- a/_posts/2016-02-04-CarmenVazquezMarin.html
+++ b/_posts/2016-02-04-CarmenVazquezMarin.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Carmen M. Vazquez-Marin"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Carmen M."
+lastName: "Vazquez-Marin"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://vazquecm.github.io"
+githubUrl: "https://github.com/vazquecm"
+linkedInUrl: "https://www.linkedin.com/in/vazquezcm"
+body: "Putting my nursing skills to use in the tech world to help give a voice to those who haven't found theirs yet. Enjoy reading, knitting, watching movies, and developing creative & fun apps."
 ---
 
 
