--- a/_posts/2016-02-04-JacobPaine.html
+++ b/_posts/2016-02-04-JacobPaine.html
@@ -6,7 +6,7 @@ date:   2016-02-09 12:00:00 -0600
 firstName: "Jacob"
 lastName: "Paine"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "www.jacobpaine.com"
+websiteUrl: "https://www.jacobpaine.com"
 githubUrl: "https://github.com/jacobpaine"
 linkedInUrl: "https://www.linkedin.com/in/jacob-r-paine-51870b10"
 body: "This globetrotter taught ESL, learned Chinese in Taiwan, returned to my TN roots, taught Chinese, earned a M. Ed., worked in games research, and attended NSS. Looking for a team to boost my strengths."
