--- a/_posts/2016-02-04-MatthewHays.html
+++ b/_posts/2016-02-04-MatthewHays.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Matthew Hays"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+firstName: "Matthew"
+lastName: "Hays"
+imgUrl: ""
+websiteUrl: "http://mdhays.github.io"
+githubUrl: "https://github.com/mdhays"
+linkedInUrl: "https://www.linkedin.com/in/matthew-hays-726613113"
+body: "Learning to code has been one of the most challenging and rewarding experiences in my life. I look forward to seeing where I go from here."
 ---
 
 
