anderson cook info

--- a/_posts/2016-02-04-AndersonCook.html
+++ b/_posts/2016-02-04-AndersonCook.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Anderson Cook"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Anderson"
+lastName: "Cook"
 imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+websiteUrl: "http://www.andersonmcook.com/"
+githubUrl: "https://github.com/andersonmcook"
+linkedInUrl: "https://www.linkedin.com/in/anderson-cook-48a8b1114"
+body: "I am extremely online."
 ---
 
 
