add carousel pics and hex pics edit my profile

--- a/_posts/2016-02-04-TinaWisneski.html
+++ b/_posts/2016-02-04-TinaWisneski.html
@@ -10,8 +10,9 @@ websiteUrl: "http://twisneski.github.io/"
 githubUrl: "https://github.com/Twisneski"
 linkedInUrl: "https://www.linkedin.com/in/christina-wisneski-36959216"
 body: "From bean counter to tech savvy, the training has ended.  It is time to show the world my new found skills.
-  <h1>Ready to be hired!</h1>
-    <p>Hello World!</p>"
+  <div><small>&lt;h3&gt;</small><small>Ready to be hired!</small><small>&lt;/h3&gt;</small></div>
+    &lt;p&gt;Hello World!&lt;/p&gt;"
 ---
+
 
 
