my profile changes

--- a/_posts/2016-02-04-ChristinaYoung.html
+++ b/_posts/2016-02-04-ChristinaYoung.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Christina Young"
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
+firstName: "Christina"
+lastName: "Young"
 imgUrl: "/images/joeSchmoe.jpg"
 websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+githubUrl: "https://github.com/ChristinaJYoung"
+linkedInUrl: "https://www.linkedin.com/in/christina-young-1132575b?trk=nav_responsive_tab_profile_pic"
+body: "I'm a very passionate software developer, designer and student.  I'm excited to get started on my career and continue my education!"
 ---
-
-
