--- a/_posts/2016-02-04-AllenPhelps.html
+++ b/_posts/2016-02-04-AllenPhelps.html
@@ -5,9 +5,9 @@ title:  "Allen Phelps"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Allen"
 lastName: "Phelps"
-imgUrl: "/images/allenPhelps.jpg"
-websiteUrl: "http://AJPCodes.github.io"
-githubUrl: "http://www.github.com/AJPcodes"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0787_T-c_BW.jpg"
+websiteUrl: "https://AJPCodes.github.io"
+githubUrl: "https://www.github.com/AJPcodes"
 linkedInUrl: "https://www.linkedin.com/in/allen-phelps-6b72157b"
 body: "I love the multifaceted approach to solving problems in code, the convergence of technical solutions with design creativity. I am excited to continue developing my skills in a professional capacity.
 "
