--- a/_posts/2016-02-04-AndersonCook.html
+++ b/_posts/2016-02-04-AndersonCook.html
@@ -2,10 +2,10 @@
 layout: default
 flipCard: "true"
 title:  "Anderson Cook"
-date:   2016-02-09 12:00:00 -0600
+date:   2016-02-09 12:00:00 -0602
 firstName: "Anderson"
 lastName: "Cook"
-imgUrl: "/images/joeSchmoe.jpg"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0222_T_BW.jpg"
 websiteUrl: "http://www.andersonmcook.com/"
 githubUrl: "https://github.com/andersonmcook"
 linkedInUrl: "https://www.linkedin.com/in/anderson-cook-48a8b1114"
