--- a/_posts/2016-02-04-CalebScholze.html
+++ b/_posts/2016-02-04-CalebScholze.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Software Developer"
+title:  "Caleb Scholze"
 date:   2016-03-10 10:45:00 -0600
 firstName: "Caleb"
 lastName: "Scholze"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "http://www.cscholze.com"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0602_T-c_BW.jpg"
+websiteUrl: "https://www.cscholze.com"
 githubUrl: "https://github.com/cscholze"
 linkedInUrl: "https://www.linkedin.com/in/calebscholze"
 body: "Caleb's unquenchable curiosity pushes him to be a modern polymath. As a software developer, Caleb hopes to combine his creativeness and problem solving abilities to better the world he lives in."
