--- a/_posts/2016-02-04-CarmenVazquezMarin.html
+++ b/_posts/2016-02-04-CarmenVazquezMarin.html
@@ -5,8 +5,8 @@ title:  "Carmen M. Vazquez-Marin"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Carmen M."
 lastName: "Vazquez-Marin"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "http://vazquecm.github.io"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0503_T-c_BW.jpg"
+websiteUrl: "https://vazquecm.github.io"
 githubUrl: "https://github.com/vazquecm"
 linkedInUrl: "https://www.linkedin.com/in/vazquezcm"
 body: "Putting my nursing skills to use in the tech world to help give a voice to those who haven't found theirs yet. Enjoy reading, knitting, watching movies, and developing creative & fun apps."
