--- a/_posts/2016-02-04-JacobPaine.html
+++ b/_posts/2016-02-04-JacobPaine.html
@@ -5,7 +5,7 @@ title:  "Jacob Paine"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Jacob"
 lastName: "Paine"
-imgUrl: "/images/joeSchmoe.jpg"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0115_T_BW.jpg"
 websiteUrl: "https://www.jacobpaine.com"
 githubUrl: "https://github.com/jacobpaine"
 linkedInUrl: "https://www.linkedin.com/in/jacob-r-paine-51870b10"
