--- a/_posts/2016-02-04-MikeUlvila.html
+++ b/_posts/2016-02-04-MikeUlvila.html
@@ -5,8 +5,8 @@ title:  "Mike Ulvila"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Mike"
 lastName: "Ulvila"
-imgUrl: "/images/mikeulvila.jpg"
-websiteUrl: "http://mikeulvila.com"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0537_T_BW.jpg"
+websiteUrl: "http://mikeulvila.github.io"
 githubUrl: "https://github.com/mikeulvila"
 linkedInUrl: "https://www.linkedin.com/in/mikeulvila"
 body: "Mike from Montana moved to Music City to make melodies for money.  After mastering his craft he decided to create code for cash, because that's a real bad ass."
