--- a/_posts/2016-02-04-StephanieKrause.html
+++ b/_posts/2016-02-04-StephanieKrause.html
@@ -5,10 +5,10 @@ title:  "Stephanie Krause"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Stephanie"
 lastName: "Krause"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "schmitz1193.github.io"
-githubUrl: "github.com/schmitz1193"
-linkedInUrl: "www.linkedin.com/in/stephanieskrause"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0291_T-c_BW.jpg"
+websiteUrl: "https://schmitz1193.github.io"
+githubUrl: "https://github.com/schmitz1193"
+linkedInUrl: "https://www.linkedin.com/in/stephanieskrause"
 body: "Returning to my roots as a programmer, former HR professional, basket weaving, restaurant junkie.  Excited about working on a team, expanding my strengths & skills, & finding creative solutions."
 ---
 
