--- a/_posts/2016-02-04-TinaWisneski.html
+++ b/_posts/2016-02-04-TinaWisneski.html
@@ -5,8 +5,8 @@ title:  "Tina Wisneski"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Tina"
 lastName: "Wisneski"
-imgUrl: "/images/tinaWisneski.jpg"
-websiteUrl: "http://twisneski.github.io/"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0805_T-c_BW.jpg"
+websiteUrl: "https://twisneski.github.io/"
 githubUrl: "https://github.com/Twisneski"
 linkedInUrl: "https://www.linkedin.com/in/christina-wisneski-36959216"
 body: "From bean counter to tech savvy, the training has ended.  It is time to show the world my new found skills.
