--- a/_posts/2016-02-11-Mathew-Ostrander.html
+++ b/_posts/2016-02-11-Mathew-Ostrander.html
@@ -5,7 +5,7 @@ title:  "Mathew Ostrander"
 date:   2016-02-11 12:00:00 -0600
 firstName: "Mathew"
 lastName: "Ostrander"
-imgUrl: "/images/Profile.jpg"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0422_T-c_BW.jpg"
 websiteUrl: "http://www.mathewostrander.com"
 githubUrl: "http://www.github.com/MAOstrander"
 linkedInUrl: "https://www.linkedin.com/in/maostrander"
