--- a/_posts/2016-02-04-AndriAlexandrou.html
+++ b/_posts/2016-02-04-AndriAlexandrou.html
@@ -2,11 +2,11 @@
 layout: default
 flipCard: "true"
 title:  "Andri Alexandrou"
-date:   2016-03-05 12:00:00 -0600
+date:   2016-03-05 12:00:00 -0604
 firstName: "Andri"
 lastName: "Alexandrou"
-imgUrl: "/images/andrialexandrou.jpg"
-websiteUrl: "http://www.andrialexandrou.com"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0389_T-c_BW.jpg"
+websiteUrl: "https://www.andrialexandrou.com"
 githubUrl: "https://github.com/andrialexandrou"
 linkedInUrl: "https://www.linkedin.com/in/andri-alexandrou-96687398"
 body: "Using software to pursue the curiosities."
