--- a/_posts/2016-02-04-DanielleHollis.html
+++ b/_posts/2016-02-04-DanielleHollis.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 flipCard: "true"
-title:  "DaniellePowell"
+title:  "Danielle Powell"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Danielle"
 lastName: "Powell"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "http://www.hollisdesignsstudio.com"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0484_T-c_BW.jpg"
+websiteUrl: "https://www.hollisdesignsstudio.com"
 githubUrl: "https://github.com/hollisd09"
 linkedInUrl: "https://www.linkedin.com/in/daniellehollis"
 body: "In a past life, Danielle was a public relations practitioner and a graphic designer. Now she's working to combine her skills with her newfound knowledge of coding to become a well-rounded developer."
