--- a/_posts/2016-02-04-MicahWells.html
+++ b/_posts/2016-02-04-MicahWells.html
@@ -5,10 +5,10 @@ title:  "Micah Wells"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Micah"
 lastName: "Wells"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "micahpwells.com"
-githubUrl: "github.com/micahp0506"
-linkedInUrl: "linkedin.com/in/micah-wells-0b784451"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0351_T_BW.jpg"
+websiteUrl: "https://www.micahpwells.com"
+githubUrl: "https://github.com/micahp0506"
+linkedInUrl: "https://www.linkedin.com/in/micah-wells-0b784451"
 body: "Emerging software developer who loves sports, music, and everything Jeep. I love to solve problems, learn new things, and work in a team environment."
 ---
 
