--- a/_posts/2016-02-04-MichaelConrad.html
+++ b/_posts/2016-02-04-MichaelConrad.html
@@ -5,7 +5,7 @@ title:  "Michael Conrad"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Michael"
 lastName: "Conrad"
-imgUrl: "/images/michaelConrad.jpg"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0175_T_BW.jpg"
 websiteUrl: "http://threepears.com/"
 githubUrl: "https://github.com/threepears"
 linkedInUrl: "https://www.linkedin.com/in/msconrad"
