--- a/_posts/2016-02-04-RedFrench.html
+++ b/_posts/2016-02-04-RedFrench.html
@@ -5,7 +5,7 @@ title:  "Red French"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Red"
 lastName: "French"
-imgUrl: "/images/joeSchmoe.jpg"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0688_T-c_BW.jpg"
 websiteUrl: "http://www.redfrench.net"
 githubUrl: "https://github.com/Red-French"
 linkedInUrl: "https://www.linkedin.com/in/red-french-8bbb04111"
