--- a/_posts/2016-02-04-RobertAyers.html
+++ b/_posts/2016-02-04-RobertAyers.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 flipCard: "true"
-title:  "Joe Schmoe"
+title:  "Robert Ayers "
 date:   2016-02-09 12:00:00 -0600
-firstName: "Joe"
-lastName: "Schmoe"
-imgUrl: "/images/joeSchmoe.jpg"
+firstName: "Robert"
+lastName: "Ayers"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0766_T-c_BW.jpg"
 websiteUrl: "#"
 githubUrl: "#"
 linkedInUrl: "#"
-body: "Filler text that is approximately 200 characters max. Just tell us a bit about yourself so that employers know a thing or two about you aside from what is obvious in pictures. It can't be very long."
+body: "Student at Nashville Software School."
 ---
 
 
