--- a/_posts/2016-02-04-SeforaRodriguez.html
+++ b/_posts/2016-02-04-SeforaRodriguez.html
@@ -5,8 +5,8 @@ title:  "Sefora Rodriguez"
 date:   2016-02-09 12:00:00 -0600
 firstName: "Sefora"
 lastName: "Rodriguez"
-imgUrl: "/images/joeSchmoe.jpg"
-websiteUrl: "seforarodriguez.com"
+imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0143_T_BW.jpg"
+websiteUrl: "https://www.seforarodriguez.com"
 githubUrl: "https://github.com/seforarodriguez"
 linkedInUrl: "https://www.linkedin.com/in/sefora-rodriguez-618019103"
 body: "I'm enjoying the infinite learning process that is coding.  A cup of tea, netflix and coding are the recipe for a good day"
