--- a/_posts/2016-02-04-RobertAyers.html
+++ b/_posts/2016-02-04-RobertAyers.html
@@ -6,10 +6,10 @@ date:   2016-02-09 12:00:00 -0600
 firstName: "Robert"
 lastName: "Ayers"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0766_T-c_BW.jpg"
-websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Student at Nashville Software School."
+websiteUrl: "http://robert-ayers.com/"
+githubUrl: "https://github.com/rsheldon3ayers"
+linkedInUrl: "https://www.linkedin.com/in/robert-ayers-22893665"
+body: "Making the Internet safe for people"
 ---
 
 
