Reorganize photos, add carousel pic, add class header pic, minor fixes

--- a/_posts/2016-02-04-TinaWisneski.html
+++ b/_posts/2016-02-04-TinaWisneski.html
@@ -10,7 +10,7 @@ websiteUrl: "https://twisneski.github.io/"
 githubUrl: "https://github.com/Twisneski"
 linkedInUrl: "https://www.linkedin.com/in/christina-wisneski-36959216"
 body: "From bean counter to tech savvy, the training has ended.  It is time to show the world my new found skills.
-  <small>&lt;h3&gt;</small><small>Ready to be hired!</small><small>&lt;/h3&gt;</small>
+<br /><br /><small>&lt;h3&gt;</small><small>Ready to be hired!</small><small>&lt;/h3&gt;</small>
     &lt;p&gt;Hello World!&lt;/p&gt;"
 ---
 
