--- a/_posts/2016-02-04-AmyLeeBennett.html
+++ b/_posts/2016-02-04-AmyLeeBennett.html
@@ -6,7 +6,7 @@ date:   2016-03-04 12:00:00 -0601
 firstName: "Amy Lee"
 lastName: "Bennett"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0669_T_BW.jpg"
-websiteUrl: "https://www.amylee.co"
+websiteUrl: "http://www.amylee.co"
 githubUrl: "https://github.com/albennett"
 linkedInUrl: "https://www.linkedin.com/in/amyleebennett"
 body: "Developed her passion for tech and its great ability to change global problems through working in the Boston tech scene and solo traveling throughout Asia. Loves to read, hike and fly-fish."
