--- a/_posts/2016-02-04-BenjaminBledsoe.html
+++ b/_posts/2016-02-04-BenjaminBledsoe.html
@@ -6,7 +6,7 @@ date:   2016-02-09 12:00:00 -0605
 firstName: "Benjamin"
 lastName: "Bledsoe"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0256_T-c_BW.jpg"
-websiteUrl: "https://www.bledsoedesigns.com/"
+websiteUrl: "http://www.bledsoedesigns.com/"
 githubUrl: "https://github.com/bbleds"
 linkedInUrl: "https://www.linkedin.com/in/benjamin-bledsoe-6b8584a5"
 body: "Developer, designer, explorer, and avid learner. I love anything to do with science, technology, and music."
