--- a/_posts/2016-02-04-EmmaBeaton.html
+++ b/_posts/2016-02-04-EmmaBeaton.html
@@ -6,7 +6,7 @@ date:   2016-02-09 12:00:00 -0600
 firstName: "Emma"
 lastName: "Beaton"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0359_T_BW.jpg"
-websiteUrl: "https://emmabeaton.com/"
+websiteUrl: "http://www.emmabeaton.com/"
 githubUrl: "https://github.com/beatface"
 linkedInUrl: "https://www.linkedin.com/in/emma-beaton-0822209a"
 body: "Software development is a place where I thrive, excited about new technologies and ever-searching for ways to write better code. I love working in teams and tackling complex problems."
