--- a/_posts/2016-02-04-JasonStiltner.html
+++ b/_posts/2016-02-04-JasonStiltner.html
@@ -6,7 +6,7 @@ date:   2016-02-09 12:00:00 -0600
 firstName: "Jason"
 lastName: "Stiltner"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0077_T_BW.jpg"
-websiteUrl: "https://www.stiltner.io"
+websiteUrl: "http://www.stiltner.io"
 githubUrl: "https://github.com/jstiltner"
 linkedInUrl: "https://www.linkedin.com/in/jasonlstiltner"
 body: "Balanced generalist turned coder to ideate and contribute to the great construction projects of the 21st Century.  A big picture, globally-minded problem-solver; linguist; father of two."
