added info for andrew

--- a/_posts/2016-02-04-AndrewSagraves.html
+++ b/_posts/2016-02-04-AndrewSagraves.html
@@ -7,9 +7,9 @@ firstName: "Andrew"
 lastName: "Sagraves"
 imgUrl: "/images/Final-Images-NSS/2016_03_02_NSS_Cohort_11_0275_T-c_BW.jpg"
 websiteUrl: "#"
-githubUrl: "#"
-linkedInUrl: "#"
-body: "Student at Nashville Software School."
+githubUrl: "https://github.com/asagraves"
+linkedInUrl: "https://www.linkedin.com/in/andrew-sagraves-8a056252"
+body: "Competitive soccer player for most of his life, Andrew loves a challenge. In any situation that places him with an opportunity to finish first, he strives. He loves problem solving and working in a team environment where he can improve his knowledge base."
 ---
 
 
